--- a/src/test/resources/CommonData.Properties
+++ b/src/test/resources/CommonData.Properties
@@ -1,7 +1,2 @@
 browser Chrome
-testurl https://matrika.gold/
-testurl1 https://vbuygold.com/
-testurl2 https://goldbharat.com/
-testurl3 https://stg.goldbharat.com/
-testurl4 https://admin.goldbharat.com/login
-testurl5 https://xyug.in/index.php
+testurl https://vbuygold.com/
